# C-SQL

./: .gitignore  CMakeLists.txt  README.md  prebuild.lua
include/: base_db.h  csql.h
include/internal/: string.h  value.h
include/internal/string/: string.h
include/types/: Database.h
src/: csql.cpp
src/internal/: string.cpp
src/types/: Database.cpp
test/db/: credentials.db
test/src/: main.cpp
